--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 <body>
-    <header><a href="test.html">0</a></header>
+    <header><a href="index.html">0</a></header>
     <br>
     <h1>Sketches</h1>
     <div id="myBtnContainer">
