Updated header rules

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       <button class="btn" id="btn__purple" onclick="filterSelection('purple')">Purple</button>
       <button class="btn" id="btn__yellow" onclick="filterSelection('yellow')">Yellow</button>
     </div>
-    
+
+    <!--Intro text
+    <div class="intro__para">
+      <p class="intro__text" id="intro-text">In 2020, I started sketching everyday. Click the color options to view a selection of some of my daily drawings.</p>
+    </div>-->
+
     <!-- Portfolio Gallery Grid -->
     <div class="row">
       <div class="column blue, pink">
@@ -382,5 +387,6 @@
       </div>
     <!-- END GRID -->
     </div> 
+
 </body>
 </html>
